modif de la page 404, ajout de la page objectif terminé, ajout de la verification du pseudo et de l'email unique

--- a/.htaccess
+++ b/.htaccess
@@ -36,6 +36,9 @@ RewriteRule ^objective/new$   ?page=new_objective [L]
 # Page objectif actuel (page / id_du_membre) :
 RewriteRule ^current/objective/([0-9]*)$   ?page=current_obj&id=$1 [L]
 
+# Page objectif fini (page / id_du_membre) :
+RewriteRule ^done/objective/([0-9]*)$   ?page=done_obj&id=$1 [L]
+
 # Page ajout conseil (page / id_du_membre) :
 RewriteRule ^add/advice/([0-9]*)$   ?page=add_advice&id=$1 [L]
 
@@ -44,6 +47,9 @@ RewriteRule ^add/advice/([0-9]*)/([0-9]*)$   ?page=add_advice&id=$1&id_objective
 
 # Page modif des objectifs (page / id_du_membre / id_de_lobjectif / action) :
 RewriteRule ^current/objective/([0-9]*)/([0-9]*)/([a-z_]*)$   ?page=current_obj&id=$1&id_objective=$2&action=$3 [L]
+
+# Page modif des objectifs (page / id_du_membre / id_de_lobjectif / action) :
+RewriteRule ^done/objective/([0-9]*)/([0-9]*)/([a-z_]*)$   ?page=done_obj&id=$1&id_objective=$2&action=$3 [L]
 
 # Page direction vers page ajout conseil (page / id_du_membre / id_de_lobjectif) :
 RewriteRule ^current/advices/([0-9]*)/([0-9]*)$   ?page=current_obj_advices&id=$1&id_objective=$2 [L]
