Ajout page profil + option de suppression des conseils

--- a/.htaccess
+++ b/.htaccess
@@ -27,6 +27,9 @@ RewriteRule ^account/logout$   ?page=log_out [L]
 # Page delete_account :
 RewriteRule ^account/delete$   ?page=delete_account [L]
 
+# Page profil :
+RewriteRule ^user/profile/([0-9]*)$   ?page=profile&id=$1 [L]
+
 # Page users :
 RewriteRule ^users$   /?page=list_users [L]
 
@@ -45,14 +48,17 @@ RewriteRule ^add/advice/([0-9]*)$   ?page=add_advice&id=$1 [L]
 # Page add advice (page / id_member) :
 RewriteRule ^add/advice/([0-9]*)/([0-9]*)$   ?page=add_advice&id=$1&id_objective=$2 [L]
 
-# Page modif objective (page / id_member / id_objective / action) :
+# Page modif objective current (page / id_member / id_objective / action) :
 RewriteRule ^current/objective/([0-9]*)/([0-9]*)/([a-z_]*)$   ?page=current_obj&id=$1&id_objective=$2&action=$3 [L]
 
-# Page modif objective (page / id_member / id_objective / action) :
+# Page modif objective done (page / id_member / id_objective / action) :
 RewriteRule ^done/objective/([0-9]*)/([0-9]*)/([a-z_]*)$   ?page=done_obj&id=$1&id_objective=$2&action=$3 [L]
 
 # Page current advice (page / id_member / id_objective) :
 RewriteRule ^current/advices/([0-9]*)/([0-9]*)$   ?page=current_obj_advices&id=$1&id_objective=$2 [L]
+
+# Page modif current advice (page / id_member / id_objective / id_advice / id_member_give_advice / action) :
+RewriteRule ^current/advices/([0-9]*)/([0-9]*)/([0-9]*)/([0-9]*)/([a-z_]*)$   ?page=current_obj_advices&id=$1&id_objective=$2&id_advice=$3&id_member_give_advice=$4&action=$5 [L]
 
 # ErrorDocument 404 /erreur404.php
 
