--- a/.htaccess
+++ b/.htaccess
@@ -36,6 +36,9 @@ RewriteRule ^account/messages/([0-9]*)$   ?page=messages&id=$1 [L]
 # Page advice request :
 RewriteRule ^account/request/advices/([0-9]*)$   ?page=advices_request&id=$1 [L]
 
+# Page explore :
+RewriteRule ^common/explore$   ?page=explore [L]
+
 # Page profil :
 RewriteRule ^user/profile/([0-9]*)$   ?page=profile&id=$1 [L]
 
